m/k/k3d-dfd-traefik/patch-service-tailscale.yaml
#ManagedBy: cue

apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.dev.amanibhavam.defn.run
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
